2008-02-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl: bump widget::screenruler to 1.2
	* ruler.tcl (C-showgeometry): prevent entry input from triggering
	the toplevel bindings.

2007-06-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl: update to 1.2, actual API changes (matched closer
	to toolbar), but they were not documented previously.  The core
	API remains and should be compatible with most standard use cases.
	Remove fallback sizegrip image usage, requires ttk::sizegrip now.
	update option handling with latest snit features.

	* toolbar.tcl (add): update to 1.2
	update option handling with latest snit features.
	Pass -pad to frame.
	Rename 'itemidentify' to 'itemid'.

	* stext.tcl (new): example adaptation of scrolledwindow to create
	a scrolledtext widget.

	* ruler.tcl: update to 1.1
	Correct zoom menu to show proper label.
	update option handling with latest snit features.

	* scrollw.tcl: update to 1.2
	update option handling with latest snit features.
	Use ttk::scrollbar on Windows (just not on Aqua).
	Correctly handle widgets with 1-dim scrolling.
	rework auto-handling of scrollbars.

2007-04-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* scrollw.tcl: cancel pending timer in case we are destroyed

	* mentry.tcl (::widget::createMenuEntryLayout): handle variant
	style cmd usage for 8.4 and 8.5+.

2007-03-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (C-transient, C-parent): ensure we unset parent
	transient and group when not both are set.

2007-01-30  Andreas Kupries  <andreask@activestate.com>

	* toolbar.tcl (itemidentify): New method, converting symbolic
	  button names to their actual widget path.	
	* toolbar.tcl (items): Simplified the code.

2007-01-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* scrollw.tcl (_set_scroll): move loop lock detection to include
	removal of scrollbar

2006-12-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (PlaceWindow): handle unmapped anchor
